--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="mx-8">
         <div id="charts" class="grid grid-cols-2 col-span-2 gap-4">
             <div class="bg-white/75 px-4 py-2 rounded-sm">
-                <div id="chart1-container">
+                <div id="chart1-container" class="aspect-video">
                     <h3 class="text-base text-gray-700 font-medium">My activities</h3>
                     <svg id="chart1"></svg>
                 </div>
@@ -37,7 +37,7 @@
 
         <!-- CAPTION -->
         <div id="caption" class="leading-none flex justify-end m-2">
-            <span class="text-sm text-gray-400">Source:</span>
+            <span class="text-sm text-gray-400">Source: Myself :)</span>
         </div>
     </div>
 
