Included more up to date data

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="charts" class="grid grid-cols-5 gap-4">
             <div class="bg-white/75 px-4 py-2 col-span-4 rounded-sm">
                 <div id="chart1-container" class="aspect-video">
-                    <h3 class="text-base text-gray-700 font-medium">My activities</h3>
+                    <h3 class="text-base text-gray-700 font-medium">My road to marathons</h3>
                     <svg id="chart1"></svg>
                 </div>
             </div>
