--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My Road to Marathons</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="lib/tailwind_3_4_3.min.js"></script>
+    <script src="./lib/tailwind_3_4_3.min.js"></script>
 </head>
 
 <body class="bg-gray-100 font-sans">
@@ -35,6 +35,6 @@
         </div>
     </div>
 
-    <script src="lib/d3_7_9_0.min.js"></script>
+    <script src="./lib/d3_7_9_0.min.js"></script>
     <script type="module" src="./script.js"></script>
 </body>
