--- a/pages/hidden/total-km-2024/index.html
+++ b/pages/hidden/total-km-2024/index.html
@@ -9,19 +9,17 @@
 
 <body class="bg-gray-300 font-sans">
     <!-- HEADER -->
-    <div id="header" class="flex flex-row p-4 mb-4 bg-slate-50">
+    <!-- <div id="header" class="flex flex-row p-4 mb-4 bg-slate-50">
         <div class="flex flex-row self-center items-center">
-            <!-- PAGE LOGO -->
-            <!-- <img src="./img/logo.svg" alt="dashboard logo" class="max-h-8 md:max-h-10 mx-2 md:mx-4" /> -->
             <h1 id="title" class="text-2xl md:text-3xl text-gray-600 self-center font-medium">PAGE TITLE</h1>
         </div>
 
         <div class="flex-auto"></div>
 
-        <!-- RIGHT SIDE HEADER -->
         <div id="controls" class="flex flex-row space-x-8 mr-8">
         </div>
-    </div>
+    </div> -->
+    <div class="mb-4"></div>
 
     <!-- CONTENT -->
     <div class="mx-2 md:mx-8">
